@@ -1,7 +1,7 @@
 name: 'HAL (Hypertext Application Language)'
 type: module
 description: 'Serializes entities using HAL'
-package: Core
+package: Web services
 core: 8.x
 dependencies:
   - rest
